# sender_project

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_email.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: blog_tags.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_client_user.py  0003_alter_client_email.py
clients/templates/clients/: Client_form.html  base.html  client_confirm_delete.html  client_detail.html  client_list.html  index.html
clients/templatetags/: client_email_tags.py
config/: settings.py  urls.py
sender/: admin.py  cron.py  forms.py  models.py  urls.py  views.py
sender/management/commands/: start_cron.py
sender/migrations/: 0001_initial.py  0002_sender_sender_user.py  0003_alter_sender_options.py  0004_alter_sender_options.py
sender/templates/sender/: Sender_confirm_delete.html  Sender_detail.html  Sender_form.html  sender_list.html  senderlog_confirm_delete.html  senderlog_detail.html  senderlog_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: cmg.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: change_password.html  login.html  moderating_page.html  moderating_update_status.html  password_change_done.html  register.html  reset_password.html  reset_password_done.html  user_form.html  (+2 more)
users/templatetags/: user_tags.py
(+2 files in other folders)
